--- a/index.html
+++ b/index.html
@@ -73,6 +73,88 @@ iframe, video, img {
 <section>
 <h1 class="rainbow" style="font-size:42px; font-family: 'Press Start 2P', monospace;">Nakazawaaaaaaaaaa.com</h1>
 </section>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>年齢確認</title>
+
+<style>
+  body {
+    background: black;
+    color: white;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 40px 10px;
+    text-align: center;
+  }
+
+  .notice {
+    color: red;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 15px;
+  }
+
+  .small {
+    font-size: 14px;
+    color: #ff8b8b;
+    margin-bottom: 25px;
+  }
+
+  button {
+    background: red;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 6px;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 6px;
+    cursor: pointer;
+  }
+
+  #result {
+    margin-top: 20px;
+    font-size: 22px;
+    color: red;
+    font-weight: bold;
+    display: none;
+  }
+</style>
+</head>
+<body>
+
+<div>
+  <div class="notice">
+    君は１８歳以上かな？１８歳じゃなかったら下に行かないでね
+  </div>
+  <div class="small">(サイト作者は15歳です)</div>
+
+  <button onclick="over18()">１８歳です</button>
+  <button onclick="under18()">１８歳未満です</button>
+
+  <div id="result"></div>
+</div>
+
+<script>
+function over18() {
+  const msg = document.getElementById("result");
+  msg.textContent = "絶対嘘ですね いつもそうやって１８禁サイト入ってるんですか？";
+  msg.style.display = "block";
+}
+
+function under18() {
+  const msg = document.getElementById("result");
+  msg.textContent = "正直でいいですね";
+  msg.style.display = "block";
+}
+</script>
+
+</body>
+</html>
+
 
 <section>
 <h2 style="font-size:28px; color:lime;">あなたは <span style="font-size:40px; color:yellow; font-weight:bold;">↓↓↓</span> 人目の訪問者です</h2>
@@ -89,13 +171,24 @@ iframe, video, img {
 
 <section>
 <h2 class="blink" style="color:red; font-size:36px;">おすすめサイト2</h2>
-<a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">あきひさの伝説.com</a>
+<a href="https://www.dmm.co.jp/top/" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">あきひさの伝説.com</a>
 </section>
 
 <section>
 <h2 class="blink" style="color:red; font-size:36px;">おすすめゲーム</h2>
-<a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">丸山エロス.com</a>
+<a href="https://jp.theacebanker.com/" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">丸山エロス.com</a>
 </section>
+
+<section>
+<h2 class="blink" style="color:red; font-size:36px;">おすすめリンク</h2>
+<a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">中澤エロス.com</a>
+</section>
+
+<section>
+<h2 class="blink" style="color:red; font-size:36px;">おすすめリンク2</h2>
+<a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">nakazawaaaaa.com</a>
+</section>
+
 
 <!-- 広告1 -->
 <div class="ad-box">
@@ -211,10 +304,39 @@ atOptions = {
 </div>
 </section>
 
-<section>
-<h2 style="color:lime;">ブロック崩しゲーム</h2>
-<iframe style="height:500px; border:2px solid lime;" src="https://html5.gamedistribution.com/rvvASMiM/77087b953d9047198a48528927dab68a/index.html"></iframe>
-</section>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<title>Nyan Cat Player</title>
+<style>
+  body {
+    background: black;
+    color: white;
+    text-align: center;
+    padding: 30px;
+    font-family: Arial, sans-serif;
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  audio {
+    margin-top: 20px;
+    width: 300px;
+  }
+</style>
+</head>
+<body>
+
+<!-- GIF -->
+<img src="https://www.nyan.cat/cats/original.gif" alt="Nyan Cat">
+
+<!-- オーディオ -->
+<audio controls src="https://www.nyan.cat/music/original.mp3"></audio>
+
+</body>
+</html>
 
 <!--ネイティブバナー広告1 -->
 <section>
@@ -222,18 +344,7 @@ atOptions = {
 <div id="container-2d3b6b9d1f227b1c9e373b22dc72b1b9"></div>
 </section>
 
-<section>
-<div id="columns">
-<div class="column">
-<h2 style="color:orange;">ランダム動画ジェネレーター</h2>
-<iframe id="video" style="height:250px;"></iframe>
-</div>
-<div class="column">
-<img src="76561199814821332R26 (1).png" alt="img">
-<video src="asdfg.mp4" controls></video>
-</div>
-</div>
-</section>
+
 
 <section>
 <h2 style="color:rgb(38, 0, 255);">中澤ブログ　まれに更新</h2>
@@ -267,7 +378,7 @@ atOptions = {
 </div>
 
 <section>
-<h2 style="color:red;">👍👍👍👍👍👍👍👍👍👍👍👍👍</h2>
+<h2 style="color:red;">ありえく👍👍👍👍👍👍👍👍👍👍👍👍👍</h2>
 <video src="ali.mp4" controls></video>
 </section>
 
@@ -424,13 +535,20 @@ atOptions = {
 <!-- ▲▲▲ 縦長広告 ▲▲▲ -->
 
 <section>
-<h2 style="color:red;">🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮</h2>
+<h2 style="color:red;">tEMU🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮</h2>
 <video src="temu.mp4" controls></video>
 </section>
+<p style="color: yellow; text-align: center; font-size: 18px; margin-top: 20px;">
+    脳みそがこれっくらい➡・しかない人が作ったサイトです。<br>
+    少ない知識で作ってるので爆発してるかもしれません？？？<br>
+    アリエクスプレス金子商店　制作
+</p>
 
 </div>
 
-
+<!-- ▲▲▲広告スクリプト▲▲▲ -->
+<script type='text/javascript' src='//pl28111471.effectivegatecpm.com/4b/24/a8/4b24a8d7854a65dabb77ed312bd25e3a.js'></script>
 
 </body>
 </html>
+
